--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.0.1",
+    "react-toastify": "^8.2.0",
     "swr": "^1.2.2",
     "unfetch": "^4.2.0"
   },
